Fix vertical align

--- a/css/main.css
+++ b/css/main.css
@@ -16,23 +16,15 @@
 }
 /*------------------Buttons---------------------*/
 .custom-left-border-radius {
-  -webkit-border-top-left-radius: 4px;
-  -moz-border-bottom-left-radius: 4px;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
-  -webkit-border-top-right-radius: 0px;
-  -moz-border-bottom-right-radius: 0px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
 }
 
 .custom-right-border-radius {
-  -webkit-border-top-right-radius: 4px;
-  -moz-border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  -webkit-border-top-left-radius: 0px;
-  -moz-border-bottom-left-radius: 0px;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
 }
@@ -106,7 +98,6 @@
 body {
   background: url(../img/background.jpg) no-repeat center center;
   width: 100%;
-  padding: 20px 10px 60px 10px;
   height: 100%;
   min-height: 100vh;
   background-size: cover;
@@ -119,13 +110,16 @@ body {
   position: relative;
   width: 100%;
   margin-left: 0px;
-  margin-top: 3%;
+  display: flex;
+  min-height: 100vh;
+  align-items: center;
 }
 
 .main-logo {
   width: 370px;
   max-width: 100%;
   margin-bottom: 0px;
+  margin-top: -15%;
 }
 
 .value-proposition.lead {
@@ -197,6 +191,21 @@ body {
 /* Landscape phones and down */
 @media (max-width: 480px) {
   .btn-lg { margin-left: 0; width: 100%; }
+  .main-logo { margin-top: 0;  }
+  .header-info { margin-bottom: 30px; }
+  .custom-left-border-radius {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 0px;
+  }
+
+  .custom-right-border-radius {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 4px;
+  }
 }
 /* Landscape phones and down */
 @media (min-width: 480px) and (max-width: 786px) {
